--- a/Projects/NetCore001/NetCore001/Views/Account/Register.cshtml
+++ b/Projects/NetCore001/NetCore001/Views/Account/Register.cshtml
@@ -26,7 +26,21 @@
                 <input asp-for="ConfirmPassword" class="form-control" />
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-default">Register</button>
+            <div class="form-group">
+                <label asp-for="Roles"></label>
+                
+                <div>
+                    @Html.DropDownList("Role", new SelectList(Model.Roles, "Text","Text"), new { @class="form-control"})
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-12">
+                    <button type="submit" class="btn btn-default">Register</button>
+                    </div>
+                </div>
+
+           
         </form>
     </div>
 </div>
