--- a/Projects/NetCore001/NetCore001/Views/Foods/Index.cshtml
+++ b/Projects/NetCore001/NetCore001/Views/Foods/Index.cshtml
@@ -67,9 +67,9 @@
                 @Html.DisplayFor(modelItem => item.NomTCA)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
+                <a asp-action="Edit" class="btn btn-success" asp-route-id="@item.ID">Edit</a> |
+                <a asp-action="Details" class="btn btn-info" asp-route-id="@item.ID">Details</a> |
+                <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.ID">Delete</a>
             </td>
         </tr>
 }
